--- a/index.html
+++ b/index.html
@@ -22,12 +22,8 @@ layout: home
             <div class="w-full lg:w-6/12 px-4 ml-auto mr-auto text-center">
               <div class="pr-12">
                 <h1 class="text-white font-semibold text-5xl">
-                  Your story starts with us.
+                  An experimental PS Vita emulator.
                 </h1>
-                <p class="mt-4 text-lg text-gray-300">
-                  This is a simple example of a Landing Page you can build using
-                  Cookie. You can see README file for installation and customization.
-                </p>
               </div>
             </div>
           </div>
@@ -270,11 +266,6 @@ layout: home
           <div class="flex flex-wrap justify-center text-center mb-24">
             <div class="w-full lg:w-6/12 px-4">
               <h2 class="text-4xl font-semibold">Here are our heroes</h2>
-              <p class="text-lg leading-relaxed m-4 text-gray-600">
-                According to the National Oceanic and Atmospheric
-                Administration, Ted, Scambos, NSIDClead scentist, puts the
-                potentially record maximum.
-              </p>
             </div>
           </div>
           <div class="flex flex-wrap">
@@ -282,14 +273,14 @@ layout: home
               <div class="px-6">
                 <img
                   alt="..."
-                  src="./assets/img/team-1-800x800.jpg"
+                  src="./assets/img/lockna.png"
                   class="shadow-lg rounded-full max-w-full mx-auto"
                   style="max-width: 120px;"
                 />
                 <div class="pt-6 text-center">
-                  <h5 class="text-xl font-bold">Ryan Tompson</h5>
+                  <h5 class="text-xl font-bold">Lockna</h5>
                   <p class="mt-1 text-sm text-gray-500 uppercase font-semibold">
-                    Web Developer
+                    Lead Developer
                   </p>
                   <div class="mt-6">
                     <button
@@ -321,9 +312,9 @@ layout: home
                   style="max-width: 120px;"
                 />
                 <div class="pt-6 text-center">
-                  <h5 class="text-xl font-bold">Romina Hadid</h5>
+                  <h5 class="text-xl font-bold">Syntx</h5>
                   <p class="mt-1 text-sm text-gray-500 uppercase font-semibold">
-                    Marketing Specialist
+                    Web Developer
                   </p>
                   <div class="mt-6">
                     <button
@@ -341,6 +332,7 @@ layout: home
                 </div>
               </div>
             </div>
+            <!--
             <div class="w-full md:w-6/12 lg:w-3/12 lg:mb-0 mb-12 px-4">
               <div class="px-6">
                 <img
@@ -414,6 +406,7 @@ layout: home
                 </div>
               </div>
             </div>
+            //-->
           </div>
         </div>
       </section>
