--- a/index.html
+++ b/index.html
@@ -61,10 +61,9 @@ layout: home
                   >
                     <i class="fas fa-award"></i>
                   </div>
-                  <h6 class="text-xl font-semibold">Awarded Agency</h6>
+                  <h6 class="text-xl font-semibold">Where can I download it?</h6>
                   <p class="mt-2 mb-4 text-gray-600">
-                    Divide details about your product or agency work into parts.
-                    A paragraph describing a feature will be enough.
+                    We will provide pre-compiled binaries when the project arrives at a state where it can do something.
                   </p>
                 </div>
               </div>
@@ -79,10 +78,9 @@ layout: home
                   >
                     <i class="fas fa-retweet"></i>
                   </div>
-                  <h6 class="text-xl font-semibold">Free Revisions</h6>
+                  <h6 class="text-xl font-semibold">Why did you choose Anubis as the name?</h6>
                   <p class="mt-2 mb-4 text-gray-600">
-                    Keep you user engaged by providing meaningful information.
-                    Remember that by this time, the user is curious.
+                    I chose Anubis as the projects name, since I'm a huge fan of egyptian mythology and I was playing Assassins Creed Origins at the time ;)
                   </p>
                 </div>
               </div>
@@ -97,10 +95,9 @@ layout: home
                   >
                     <i class="fas fa-fingerprint"></i>
                   </div>
-                  <h6 class="text-xl font-semibold">Verified Company</h6>
+                  <h6 class="text-xl font-semibold">Discord</h6>
                   <p class="mt-2 mb-4 text-gray-600">
-                    Write a few lines about each one. A paragraph describing a
-                    feature will be enough. Keep you user engaged!
+                    You can join our Discord here! There you can contact the developer team or you can talk with other users!
                   </p>
                 </div>
               </div>
@@ -114,26 +111,23 @@ layout: home
                 <i class="fas fa-user-friends text-xl"></i>
               </div>
               <h3 class="text-3xl mb-2 font-semibold leading-normal">
-                Working with us is a pleasure
+                Come and contribute to Anubis
               </h3>
               <p
                 class="text-lg font-light leading-relaxed mt-4 mb-4 text-gray-700"
               >
-                Don't let your uses guess by attaching tooltips and popoves to
-                any element. Just make sure you enable them first via
-                JavaScript.
+                Rust is the language of choice, so some experience would be beneficial but are not required.
               </p>
               <p
                 class="text-lg font-light leading-relaxed mt-0 mb-8 text-gray-700"
               >
-                The kit comes with three pre-built pages to help you get started
-                faster. You can change the text and images and you're good to
-                go. Just make sure you enable them first via JavaScript.
+                Anbuis will be build on top of a custom written dynamic recompiler, which will also support multiple architectures.
+                The GPU emulation will use wgpu and spir-v to talk to the host gpu.
               </p>
               <a
-                href="https://github.com/abhinavs/cookie"
+                href="https://github.com/anubis-rs/anubis"
                 class="font-bold text-gray-500 px-8 py-4 rounded-md bg-gray-50 hover:bg-gray-400 hover:text-gray-50"
-                >Check Cookie!</a>
+                >Check out the Anubis source code!</a>
             </div>
             <div class="w-full md:w-4/12 px-4 mr-auto ml-auto">
               <div
