--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ layout: home
               <p
                 class="text-lg font-light leading-relaxed mt-4 mb-4 text-gray-700"
               >
-                Rust is the language of choice, so some experience would be beneficial but are not required.
+                Rust is the language of choice, so some experience would be beneficial but is required.
               </p>
               <p
                 class="text-lg font-light leading-relaxed mt-0 mb-8 text-gray-700"
