--- a/index.html
+++ b/index.html
@@ -152,12 +152,10 @@ layout: home
                     ></polygon>
                   </svg>
                   <h4 class="text-xl font-bold text-white">
-                    Top Notch Services
+                    A growing community
                   </h4>
                   <p class="text-md font-light mt-2 text-white">
-                    The Arctic Ocean freezes every winter and much of the
-                    sea-ice then thaws every summer, and that process will
-                    continue whatever happens.
+                    Join us and help build a great community around the PS Vita.
                   </p>
                 </blockquote>
               </div>
@@ -201,11 +199,9 @@ layout: home
                 >
                   <i class="fas fa-rocket text-xl"></i>
                 </div>
-                <h3 class="text-3xl font-semibold">A growing company</h3>
+                <h3 class="text-3xl font-semibold">A growing community project</h3>
                 <p class="mt-4 text-lg leading-relaxed text-gray-600">
-                  The extension comes with three pre-built pages to help you get
-                  started faster. You can change the text and images and you're
-                  good to go.
+                  Be there when a new project is created from scratch and some components are implemented by us.
                 </p>
                 <ul class="list-none mt-6">
                   <li class="py-2">
@@ -218,7 +214,7 @@ layout: home
                       </div>
                       <div>
                         <h4 class="text-gray-600">
-                          Carefully crafted components
+                          Written in Rust
                         </h4>
                       </div>
                     </div>
@@ -232,7 +228,7 @@ layout: home
                         ></span>
                       </div>
                       <div>
-                        <h4 class="text-gray-600">Amazing page examples</h4>
+                        <h4 class="text-gray-600">Self-written Arm-Cortex A9 JIT compiler</h4>
                       </div>
                     </div>
                   </li>
@@ -245,7 +241,7 @@ layout: home
                         ></span>
                       </div>
                       <div>
-                        <h4 class="text-gray-600">Dynamic components</h4>
+                        <h4 class="text-gray-600">As much as possible will be provided as a separate Rust crate.</h4>
                       </div>
                     </div>
                   </li>
@@ -282,11 +278,6 @@ layout: home
                       type="button"
                     >
                       <i class="fab fa-twitter"></i></button
-                    ><button
-                      class="bg-blue-600 text-white w-8 h-8 rounded-full outline-none focus:outline-none mr-1 mb-1"
-                      type="button"
-                    >
-                      <i class="fab fa-facebook-f"></i></button
                     ><button
                       class="bg-pink-500 text-white w-8 h-8 rounded-full outline-none focus:outline-none mr-1 mb-1"
                       type="button"
@@ -404,6 +395,7 @@ layout: home
           </div>
         </div>
       </section>
+      <!--
       <section class="pb-20 relative block bg-gray-900">
         <div
           class="bottom-auto top-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden -mt-20"
@@ -427,11 +419,10 @@ layout: home
         <div class="container mx-auto px-4 lg:pt-24 lg:pb-64">
           <div class="flex flex-wrap text-center justify-center">
             <div class="w-full lg:w-6/12 px-4">
-              <h2 class="text-4xl font-semibold text-white">Build something</h2>
+              <h2 class="text-4xl font-semibold text-white">Build something with us</h2>
+
               <p class="text-lg leading-relaxed mt-4 mb-4 text-gray-500">
-                Put the potentially record low maximum sea ice extent tihs year
-                down to low ice. According to the National Oceanic and
-                Atmospheric Administration, Ted, Scambos.
+
               </p>
             </div>
           </div>
@@ -542,6 +533,7 @@ layout: home
           </div>
         </div>
       </section>
+      //-->
     </main>
     
   </div>
