--- a/index.html
+++ b/index.html
@@ -292,12 +292,12 @@ layout: home
               <div class="px-6">
                 <img
                   alt="..."
-                  src="./assets/img/team-2-800x800.jpg"
+                  src="./assets/img/mette.png"
                   class="shadow-lg rounded-full max-w-full mx-auto"
                   style="max-width: 120px;"
                 />
                 <div class="pt-6 text-center">
-                  <h5 class="text-xl font-bold">Syntx</h5>
+                  <h5 class="text-xl font-bold">Mette</h5>
                   <p class="mt-1 text-sm text-gray-500 uppercase font-semibold">
                     Web Developer
                   </p>
@@ -317,7 +317,6 @@ layout: home
                 </div>
               </div>
             </div>
-            <!--
             <div class="w-full md:w-6/12 lg:w-3/12 lg:mb-0 mb-12 px-4">
               <div class="px-6">
                 <img
@@ -327,31 +326,22 @@ layout: home
                   style="max-width: 120px;"
                 />
                 <div class="pt-6 text-center">
-                  <h5 class="text-xl font-bold">Alexa Smith</h5>
+                  <h5 class="text-xl font-bold">Syntx</h5>
                   <p class="mt-1 text-sm text-gray-500 uppercase font-semibold">
-                    UI/UX Designer
+                    Designer
                   </p>
                   <div class="mt-6">
                     <button
-                      class="bg-red-600 text-white w-8 h-8 rounded-full outline-none focus:outline-none mr-1 mb-1"
-                      type="button"
-                    >
-                      <i class="fab fa-google"></i></button
-                    ><button
                       class="bg-blue-400 text-white w-8 h-8 rounded-full outline-none focus:outline-none mr-1 mb-1"
                       type="button"
                     >
                       <i class="fab fa-twitter"></i></button
-                    ><button
-                      class="bg-gray-800 text-white w-8 h-8 rounded-full outline-none focus:outline-none mr-1 mb-1"
-                      type="button"
                     >
-                      <i class="fab fa-instagram"></i>
-                    </button>
                   </div>
                 </div>
               </div>
             </div>
+            <!--
             <div class="w-full md:w-6/12 lg:w-3/12 lg:mb-0 mb-12 px-4">
               <div class="px-6">
                 <img
