Change contact possiblilites from the developers
Remove all foreign platform links for team member mette and add a link to the Github Profile of lockna to it's site profile

--- a/index.html
+++ b/index.html
@@ -273,17 +273,13 @@ layout: home
                     Lead Developer
                   </p>
                   <div class="mt-6">
+                    <a href="https://github.com/Lockna">
                     <button
                       class="bg-blue-400 text-white w-8 h-8 rounded-full outline-none focus:outline-none mr-1 mb-1"
                       type="button"
                     >
-                      <i class="fab fa-twitter"></i></button
-                    ><button
-                      class="bg-pink-500 text-white w-8 h-8 rounded-full outline-none focus:outline-none mr-1 mb-1"
-                      type="button"
+                      <i class="fab fa-github"></i></button
                     >
-                      <i class="fab fa-dribbble"></i>
-                    </button>
                   </div>
                 </div>
               </div>
@@ -301,19 +297,6 @@ layout: home
                   <p class="mt-1 text-sm text-gray-500 uppercase font-semibold">
                     Web Developer
                   </p>
-                  <div class="mt-6">
-                    <button
-                      class="bg-red-600 text-white w-8 h-8 rounded-full outline-none focus:outline-none mr-1 mb-1"
-                      type="button"
-                    >
-                      <i class="fab fa-google"></i></button
-                    ><button
-                      class="bg-blue-600 text-white w-8 h-8 rounded-full outline-none focus:outline-none mr-1 mb-1"
-                      type="button"
-                    >
-                      <i class="fab fa-facebook-f"></i>
-                    </button>
-                  </div>
                 </div>
               </div>
             </div>
