Add empty div to prevent weird website behaviour

--- a/index.html
+++ b/index.html
@@ -297,6 +297,9 @@ layout: home
                   <p class="mt-1 text-sm text-gray-500 uppercase font-semibold">
                     Web Developer
                   </p>
+                  <div class="mt-6">
+                    
+                  </div>
                 </div>
               </div>
             </div>
