--- a/index.html
+++ b/index.html
@@ -298,7 +298,10 @@ layout: home
                     Web Developer
                   </p>
                   <div class="mt-6">
-                    
+                    <button
+                      class="bg-blue-400 text-white w-8 h-8 rounded-full outline-none focus:outline-none mr-1 mb-1"
+                      type="button"
+                    >
                   </div>
                 </div>
               </div>
