--- a/index.html
+++ b/index.html
@@ -272,6 +272,15 @@ layout: home
                   <p class="mt-1 text-sm text-gray-500 uppercase font-semibold">
                     Lead Developer
                   </p>
+                  <a href="https://github.com/Lockna">
+                    <div class="mt-6">
+                      <button
+                        class="bg-blue-400 text-white w-8 h-8 rounded-full outline-none focus:outline-none mr-1 mb-1"
+                        type="button"
+                      >
+                        <i class="fab fa-github"></i></button
+                      ></a>
+                  </div>
                 </div>
               </div>
             </div>
