--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ layout: home
                   </div>
                   <h6 class="text-xl font-semibold">Discord</h6>
                   <p class="mt-2 mb-4 text-gray-600">
-                    You can join our Discord here! There you can contact the developer team or you can talk with other users!
+                    You can join our Discord here! There you can contact the developer team or you can talk with other users
                   </p>
                 </div>
               </div>
@@ -121,7 +121,7 @@ layout: home
               <p
                 class="text-lg font-light leading-relaxed mt-0 mb-8 text-gray-700"
               >
-                Anbuis will be build on top of a custom written dynamic recompiler, which will also support multiple architectures.
+                Anubis will be build on top of a custom written dynamic recompiler, which will also support multiple architectures.
                 The GPU emulation will use wgpu and spir-v to talk to the host gpu.
               </p>
               <a
@@ -155,7 +155,7 @@ layout: home
                     A growing community
                   </h4>
                   <p class="text-md font-light mt-2 text-white">
-                    Join us and help build a great community around the PS Vita.
+                    Join us and help build a great community around the PS Vita!
                   </p>
                 </blockquote>
               </div>
@@ -201,7 +201,7 @@ layout: home
                 </div>
                 <h3 class="text-3xl font-semibold">A growing community project</h3>
                 <p class="mt-4 text-lg leading-relaxed text-gray-600">
-                  Be there when a new project is created from scratch and some components are implemented by us.
+                  Be there when a new project is created from scratch and components are implemented by us.
                 </p>
                 <ul class="list-none mt-6">
                   <li class="py-2">
