--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ layout: home
                   </div>
                   <h6 class="text-xl font-semibold">Discord</h6>
                   <p class="mt-2 mb-4 text-gray-600">
-                    You can join our Discord here! There you can contact the developer team or you can talk with other users
+                    You can join our Discord <a href="https://discord.gg/Kphvzgwdkz"> here</a> There you can contact the developer team or you can talk with other users
                   </p>
                 </div>
               </div>
